# EngineGPT-V2

./: CMakeLists.txt  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: build.yml
Arquivos .bat/: OrdemParaExecutar.txt  build_engine.bat  check_scripts.bat  configure_engine.bat  install_engine_tools.bat  set_env_variables.bat
Arquivos Powershell/: License.txt  OrdemParaExecutar.txt  README.md  build_engine.ps1  check_scripts.ps1  configure_engine.ps1  install_engine_tools.ps1  set_env_variables.ps1
include/core/: Platform.h
scripts/: setup.ps1  setup.sh  setup_termux.sh
src/: main.cpp
src/core/: Platform.cpp
tests/: test_main.cpp
